# Labs

Lab1/: output.csv
Lab2/: Exercise2.hs  Tokens.hs
Lab3/Exercise1/: Grammar.hs  Main.hs
Lab3/Exercise2/: Tokens.hs
Lab3/Exercise3/: BNF.txt  Grammar.hs  MDLTokens.x
Lab3/Solution/Task1/: Grammar.hs  Grammar.y  Tokens.hs  Tokens.x
Lab3/Solution/Task2/: Grammar.hs  Tokens.hs  test1.txt
Lab3/Solution/Task3/: MDLGrammar.y  MDLTokens.hs  Main.hs
Lab4/Exercise1/: Main.hs  Tokens.hs
Lab4/Exercise2/: Grammar.y  Main.hs
Lab4/Exercise2,3/: BNF.txt  Grammar.hs
Lab4/Exercise2-4/: test.txt
Lab4/Exercise2-4/proglet/: proglet.cabal
Lab4/Exercise3/: MDLTokens.hs  exampleErr.txt
Lab4/Exercise5/: BNF.txt  Exercise5.cabal  Grammar.hs  Tokens.hs
Lab4/Exercise5/app/: Grammar.y  Main.hs  ToyTypes.hs
Lab4/Exercise5/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
Lab4/Sheet5/: Toy.hs  ToyEval.hs
Lab4/Solution/Task3/: MDLGrammar.hs  MDLTokens.x
Lab5/Exercise1/: CHANGELOG.md  Exercise1.cabal  test.txt  test1.txt
Lab5/Exercise1/app/: Grammar.y  Main.hs  Tokens.x  ToyEval.hs
Lab5/Sheet5/: ToyGrammar.y  ToyTypes.hs
Sheet2/Task2/: Tokens.x
Sheet2/Task3/: MDLTokens.hi  Main.hi  Main.hs
Week1/: ExerciseSheet1.hs  test.csv
Week2/: Exercise2.hi  Exercise2.hs  Tokens.hi  Tokens.hs  Tokens.x  test1.txt
Week3/Exercise1/: Grammar.y  Tokens.hs
Week3/Exercise2/: Grammar.hs
Week3/Exercise3/: Grammar.y  Main.hs
Week3/Solution/Task2/: Grammar.y  Tokens.x
(+18 files in other folders)
