cabal-version:      2.4
name:               Exercise5
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Sik11
maintainer:         wellingtonorasiki@outlook.com

-- A copyright notice.
-- copyright:
-- category:
build-type:         Simple
extra-source-files: CHANGELOG.md

executable Exercise5
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules: Tokens,Grammar,ToyTypes

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.3.0,array
    build-tools:      happy, alex
    hs-source-dirs:   app
    default-language: Haskell2010
